The end of section 2 in gio

--- a/docker/xdebug.ini
+++ b/docker/xdebug.ini
@@ -3,10 +3,13 @@ xdebug.mode=develop,debug
 xdebug.start_with_request=yes
 xdebug.discover_client_host=1
 ;xdebug.client_host=host.docker.internal 
-xdebug.client_host=clive-Inspiron-7591
+xdebug.client_host=localhost
 xdebug.client_port=9003
 ;xdebug.remote_log="/usr/local/var/log/xdebug.log"
 xdebug.default_enable=1
 xdebug.remote_enable=1
 ;xdebug.remote_host=localhost
 xdebug.remote_autostart=1
+xdebug.remote_host=172.18.0.1
+
+
